Fix letter-spacing style problem for headers

--- a/_sass/basic.sass
+++ b/_sass/basic.sass
@@ -23,7 +23,6 @@ h1, h2, h3, h4, h5, h6
     font-weight: 300
     line-height: 1.5em
     font-family: $header-font
-    letter-spacing: 2px
     header &
         text-transform: uppercase
     a
